@@ -450,13 +450,13 @@ df94cf3bef8f8da5c22d30b26f78e917c22d71721b3da185a56e876c13a3e87d  test/results/t
 00e072d966cb07e65cda37ea352c0bc9891bdf8a8bba21d683007ada8bc246fe  test/results/test0106-riscv32-binary
 83a6029036e6be201153f5c7669ba0b2da570e2321d9f2ef175993231524206b  test/results/test0106-riscv64-binary
 6c34937fdeeb71acca7b8fbb5f7ba6bb4d0c189ee9395639ace92b5950d518a3  test/results/test0106-x86-binary
-6d6c98592b4f71003c6e69c2cafa7e1e4b0ae85f7ed55d0d4d16e999f3792975  test/results/test1000-aarch64-binary
-b359e59b888b04fb0bcf5cbd2e9e71633363f7529f8915d86a25282747626262  test/results/test1000-amd64-binary
-59d742aefe1ce0e9b25f9219fe12291c54d039252fc6c76a9abb2045ef726ac2  test/results/test1000-armv7l-binary
-7b51a6e08011113857bee696abd172c376da891e156b79488f5e408bb688a482  test/results/test1000-knight-posix-binary
-060b2259d041597ab1e05623ffd9571d151f82c371058915c7d4a981515275e8  test/results/test1000-riscv32-binary
-cb409c398197c442d4a74ddb8e19ece3d0ce11f0881a35ea50b002fd9fa1a2d9  test/results/test1000-riscv64-binary
-68c78f6704659c72290ff3b6e7e8af6e872729d28dd122b03df28b9ef0d3a666  test/results/test1000-x86-binary
+2df8824196d84e01b64b50493afbc3f4be48622e93a2454abbe0b1ec0225b233  test/results/test1000-aarch64-binary
+427ea3d40d84362791afdcc19162db91f02c088f7fe5bf45c273e7296534800e  test/results/test1000-amd64-binary
+4a1b3008cfe9c7b1abb5661fa1db4befaa6666d265c2edd68fd7c1e54942e8fd  test/results/test1000-armv7l-binary
+96318b0201026b64a6a6f45bb56628562bf0ce149de7fb84c6561920976c771c  test/results/test1000-knight-posix-binary
+796c7038fd9b45a8e8bc9de1eebeea187d3ff24bbd1e3981d2c8bce67a337ff5  test/results/test1000-riscv32-binary
+2ea0b60981637755e332f884a96960b18528b4d289d9387ce13b85bca11bb186  test/results/test1000-riscv64-binary
+8ecf376266de3dad380ed0be2f13924eb0d7507daedb2f6d88506ae0b5686f60  test/results/test1000-x86-binary
 5762a62fa777225e8cef41f48cc4e1010db7978a31d68868ca8e3f2ea73d41b3  test/results/variables.c-aarch64-binary
 e60a3c62aa7ded83a7eceac6961822f86001c751b6832f0ef8a3b12bd5be3039  test/results/variables.c-amd64-binary
 ac1298d6d1d8e4dd5eca046a654987b76ff339ae3124d314f2f3cb53be3cae5b  test/results/variables.c-armv7l-binary
